# oraODBC

./: ChangeLog  FAQ  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  acconfig.h  aclocal.m4  bootstrap  config.cache  config.h  config.h.in  config.status  configure  configure.ac  configure.in  configure_local  direct_exec1.c  libtool  malloctest.c  manifest  read1.c  runtests
.deps/: connect2.P  direct_exec1.P  insert1.P  malloctest.P  read1.P
config/: Makefile  Makefile.in
junk/: grep_for_funcs
src/: Makefile  Makefile.am  Makefile.in  SQLAllocHandle.c  SQLBindCol.c  SQLBindParameter.c  SQLBrowseConnect.c  SQLBulkOperations.c  SQLCancel.c  SQLCloseCursor.c  SQLColAttribute.c  SQLColumnPrivileges.c  SQLColumns.c  SQLConnect.c  SQLCopyDesc.c  SQLDescribeCol.c  SQLDescribeParam.c  SQLDisconnect.c  SQLDriverConnect.c  SQLEndTran.c  SQLExecDirect.c  SQLExecute.c  SQLExtendedFetch.c  SQLFetch.c  SQLFetchScroll.c  SQLForeignKeys.c  SQLFreeHandle.c  SQLFreeStmt.c  SQLGetConnectAttr.c  SQLGetCursorName.c  SQLGetData.c  SQLGetDescField.c  SQLGetDescRec.c  SQLGetDiagField.c  SQLGetDiagRec.c  SQLGetEnvAttr.c  SQLGetFunctions.c  SQLGetInfo.c  SQLGetStmtAttr.c  SQLGetTypeInfo.c  (+39 more)
src/.deps/: SQLAllocHandle.P  SQLBindCol.P  SQLBindParameter.P  SQLBrowseConnect.P  SQLBulkOperations.P  SQLCancel.P  SQLCloseCursor.P  SQLColAttribute.P  SQLColumnPrivileges.P  SQLColumns.P  SQLConnect.P  SQLCopyDesc.P  SQLDescribeCol.P  SQLDescribeParam.P  SQLDisconnect.P  SQLDriverConnect.P  SQLEndTran.P  SQLExecDirect.P  SQLExecute.P  SQLExtendedFetch.P  SQLFetch.P  SQLFetchScroll.P  SQLForeignKeys.P  SQLFreeHandle.P  SQLFreeStmt.P  SQLGetConnectAttr.P  SQLGetCursorName.P  SQLGetData.P  SQLGetDescField.P  SQLGetDescRec.P  SQLGetDiagField.P  SQLGetDiagRec.P  SQLGetEnvAttr.P  SQLGetFunctions.P  SQLGetInfo.P  SQLGetStmtAttr.P  SQLGetTypeInfo.P  SQLMoreResults.P  SQLNativeSql.P  SQLNumParams.P  (+25 more)
test/: Makefile  Makefile.am  Makefile.in  SQLColAttributesIn.h  SQLColumns1.c  SQLColumns2.c  SQLGetInfoIn.h  SQLPutTest.c  check_oracle_environment  cleanup.c  commit1.c  connect1.c  connect2.c  direct_exec1.c  direct_exec2.c  getinfo1.c  insert1.c  insert2.c  insert3.c  insert4.c  insert5.c  insert6.c  insert7.c  lowlevel.c  malloctest.c  read1.c  read2.c  read3.c  read4.c  read5.c  readchars.c  rollback1.c  runtests  test_defs.h  tested.so.far
test/.deps/: connect1.P  connect2.P  direct_exec1.P  insert1.P  insert2.P  insert3.P  malloctest.P  read1.P
